--- a/src/home.html
+++ b/src/home.html
@@ -286,7 +286,19 @@
 
     <section class="banner" style="text-align: center">
         <div class="container">
-            <img src="img/home-banner.jpg" alt="баннер" style="width: 100%">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="img/home-banner.jpg" alt="баннер" style="width: 100%">
+                    <img src="img/home-banner.jpg" alt="баннер" style="width: 100%">
+                    <img src="img/home-banner.jpg" alt="баннер" style="width: 100%">
+                </div>
+                <div class="slider__btn-next">
+                    <img src="img/icon-down.svg" alt="">
+                </div>
+                <div class="slider__btn-prev">
+                    <img src="img/icon-down.svg" alt="">
+                </div>
+            </div>
         </div>
     </section>
 
