--- a/src/create-tender-js.html
+++ b/src/create-tender-js.html
@@ -521,177 +521,11 @@
                                     </label>
                                 </div>
                             </div>
-                            <!-- <div class="nav__content" id="lot-2">
-                                <div class="table table--basket mb-4">
-                                    <div class="table__head">
-                                        <div class="table__col table__col--btitle">
-                                            Наименование
-                                        </div>
-                                        <div class="table__col table__col--bcount">
-                                            Кол-во
-                                        </div>
-                                        <div class="table__col table__col--bparams">
-                                            <div class="table__label table__label--black">Ед. изм</div>
-                                        </div>
-                                        <div class="table__col table__col--bsize">
-                                            <div class="table__label table__label--black">Размер</div>
-                                            <div class="table__label">Толщина/Размер</div>
-                                        </div>
-                                        <div class="table__col table__col--bwidth">
-                                            <div class="table__label table__label--black">Длина</div>
-                                            <div class="table__label">Х ширина</div>
-                                        </div>
-                                        <div class="table__col table__col--bsteel">
-                                            <div class="table__label table__label--black">Сталь</div>
-                                        </div>
-                                        <div class="table__col table__col--bprice">
-                                            <div class="table__label table__label--black">Цена</div>
-                                            <div class="table__label">Не больше</div>
-                                        </div>
-                                        <div class="table__col table__col--bnote">
-                                            <div class="table__label table__label--black">Примечание</div>
-                                        </div>
-                                    </div>
-                                    <div class="table__body">
-                                        
-                                    </div>
-                                </div>
-
-                                <div class="info-block basket__info-block mb-4">
-                                    <div class="info-block__icon info-block__icon--small">
-                                        <img src="img/info.svg" alt="">
-                                    </div>
-                                    <div class="info-block__text">
-                                        <h5 class="mb-2">Внимание!</h5>
-                                        <ul>
-                                            <li><em>— если у Вас несколько позиций, заполните поля «кол-во» «размер» «сталь»</em></li>
-                                            <li><em>— если позиций много, просто выберете виды сортамента и прикрепите файл со списком
-                                                <br>снизу станицы</em></li>
-                                        </ul>
-                                    </div>
-                                </div>
-
-                                <div class="basket__suppliers-inner">
-                                    <h4 class="mb-3">Описание лота</h4>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Заголовок лота*</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Укажите Заголовок лота*</div>
-                                    </label>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Дополнительные сведения</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Дополнительные сведения</div>
-                                    </label>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Примечание</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Примечание</div>
-                                    </label>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Ориентировочная сумма контракта</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Ориентировочная сумма контракта</div>
-                                    </label>
-                                    <label class="basket__suppliers-field">
-                                        <input type="checkbox" name="check-one" value="check-one" />
-                                        <span>Требуется доставка</span>
-                                    </label>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Адрес доставки</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Укажите Адрес доставки</div>
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="nav__content" id="lot-3">
-                                <div class="table table--basket mb-4">
-                                    <div class="table__head">
-                                        <div class="table__col table__col--btitle">
-                                            Наименование
-                                        </div>
-                                        <div class="table__col table__col--bcount">
-                                            Кол-во
-                                        </div>
-                                        <div class="table__col table__col--bparams">
-                                            <div class="table__label table__label--black">Ед. изм</div>
-                                        </div>
-                                        <div class="table__col table__col--bsize">
-                                            <div class="table__label table__label--black">Размер</div>
-                                            <div class="table__label">Толщина/Размер</div>
-                                        </div>
-                                        <div class="table__col table__col--bwidth">
-                                            <div class="table__label table__label--black">Длина</div>
-                                            <div class="table__label">Х ширина</div>
-                                        </div>
-                                        <div class="table__col table__col--bsteel">
-                                            <div class="table__label table__label--black">Сталь</div>
-                                        </div>
-                                        <div class="table__col table__col--bprice">
-                                            <div class="table__label table__label--black">Цена</div>
-                                            <div class="table__label">Не больше</div>
-                                        </div>
-                                        <div class="table__col table__col--bnote">
-                                            <div class="table__label table__label--black">Примечание</div>
-                                        </div>
-                                    </div>
-                                    <div class="table__body">
-                                        
-                                    </div>
-                                </div>
-
-                                <div class="info-block basket__info-block mb-4">
-                                    <div class="info-block__icon info-block__icon--small">
-                                        <img src="img/info.svg" alt="">
-                                    </div>
-                                    <div class="info-block__text">
-                                        <h5 class="mb-2">Внимание!</h5>
-                                        <ul>
-                                            <li><em>— если у Вас несколько позиций, заполните поля «кол-во» «размер» «сталь»</em></li>
-                                            <li><em>— если позиций много, просто выберете виды сортамента и прикрепите файл со списком
-                                                <br>снизу станицы</em></li>
-                                        </ul>
-                                    </div>
-                                </div>
-
-                                <div class="basket__suppliers-inner">
-                                    <h4 class="mb-3">Описание лота</h4>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Заголовок лота*</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Укажите Заголовок лота*</div>
-                                    </label>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Дополнительные сведения</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Дополнительные сведения</div>
-                                    </label>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Примечание</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Примечание</div>
-                                    </label>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Ориентировочная сумма контракта</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Ориентировочная сумма контракта</div>
-                                    </label>
-                                    <label class="basket__suppliers-field">
-                                        <input type="checkbox" name="check-one" value="check-one" />
-                                        <span>Требуется доставка</span>
-                                    </label>
-                                    <label class="materil-group basket__suppliers-field">
-                                        <span class="materil-group__label">Адрес доставки</span>
-                                        <input type="text" class="form-control base-input materil-group__input">
-                                        <div class="materil-group__error-text">Укажите Адрес доставки</div>
-                                    </label>
-                                </div>
-                            </div> -->
                         </div>    
                     </div>
                 </div>
 
-                <div class="basket__suppliers-inner">
+                <div class="basket__suppliers-inner tender-file-container">
                     <h4 class="mb-3">Прикрепите файлы тендерной документации:</h4>
                     <p class="mb-2">Состав тендера</p>
                     <div class="file-reader mb-4">
